--- a/src/styles/components/Attachment.css
+++ b/src/styles/components/Attachment.css
@@ -51,3 +51,9 @@
 .attachment.grabbing {
     cursor: grabbing;
 }
+
+@supports (scrollbar-width: thin) {
+    .attachment {
+        scrollbar-width: none;
+    }
+}
