--- a/src/styles/pages/Project.css
+++ b/src/styles/pages/Project.css
@@ -156,22 +156,18 @@
     border: 1px solid var(--theme-outline-color);
 }
 
-.project .project-creation-window .stages::-webkit-scrollbar {
-    display: block;
-}
-
-.project .project-creation-window .stages::-webkit-scrollbar-thumb {
-    display: block;
-    height: 2rem;
-    width: 2rem;
-    background: var(--themecolor1);
-    padding: 1rem;
-}
-
 @media screen and (max-width: 600px) {
     .project .panels .toolbar .tools{
         transition: 0.5s;
         gap: 0.5rem;
         flex-wrap: wrap;
+    }
+}
+
+@supports (scrollbar-width: thin) {
+    .project .project-creation-window .stages {
+        scrollbar-width: auto;
+        scrollbar-color: var(--themecolor1) transparent;
+        scroll-padding: 2rem;
     }
 }
